--- a/views/about.hbs
+++ b/views/about.hbs
@@ -4,6 +4,6 @@
         <h2>About</h2>
         <hr />
         <p>This is the about page for the WEB700 Assignment 5 application.</p>
-        <p>Developed by Bhavya Goswami.</p>
+        <p>Developed and Designed by Bliss Parmar</p>
     </main>
 </div>
