--- a/views/about.html
+++ b/views/about.html
@@ -10,7 +10,7 @@
 
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<a class="navbar-brand" href="#">Parth Bharvad</a>
+			<a class="navbar-brand" href="#">Bliss Parmar</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -58,12 +58,12 @@
     </nav>
     <main>
         <section>
-            <h2>Hello!</h2>
-            <p>My name is Bhavya Goswami. I am a student at Seneca College, currently studying BTT. I am passionate about web development and excited to share this project with you.</p>
+            <h2>Hi There!</h2>
+            <p>My name is Bliss Parmar. I am a student at Seneca College and studying BTT. I like web development and I'm thrilled to share this project with you.</p>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Bhavya Goswami (bmgoswami@Myseneca.ca, Seneca ID: 148780232)</p>
+        <p>&copy; 2024 Bliss Parmar (bbparmar@myseneca.ca, Seneca ID: 117217232)</p>
     </footer>
 </body>
 </html>
