--- a/views/home.hbs
+++ b/views/home.hbs
@@ -16,11 +16,11 @@
         <main>
             <section>
                 <h2>About This Site</h2>
-                <p>This application serves as a demonstration for handling student and course data using Node.js and Express.</p>
+                <p>This application is a demo for managing student and course information using Node.js and Express.</p>
             </section>
         </main>
         <footer>
-            <p>&copy; 2024 Bhavya Goswami (bmgoswami@myseneca.ca, Seneca ID: 148780232)</p>
+            <p>&copy; 2024 Bliss Parmar (bbparmar@myseneca.ca, Seneca ID: 117217232)</p>
         </footer>
     </main>
 </div>
