--- a/views/home.html
+++ b/views/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Bhavya Goswami</title>
+		<title>Bliss Parmar</title>
 		<meta charset="UTF-8" />
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 		<link rel="stylesheet" href="/css/theme.css">
@@ -9,7 +9,7 @@
 
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<a class="navbar-brand" href="#">Bhavya Goswami</a>
+			<a class="navbar-brand" href="#">Bliss Parmar</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -63,11 +63,11 @@
     <main>
         <section>
             <h2>About This Site</h2>
-            <p>This application serves as a demonstration for handling student and course data using Node.js and Express.</p>
+            <p>This application is a demo for managing student and course information using Node.js and Express.</p>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Bhavya Goswami (bmgoswami@myseneca.ca, Seneca ID: 148780232)</p>
+        <p>&copy; 2024 Bliss Parmar (bbparmar@myseneca.ca, Seneca ID: 117217232)</p>
     </footer>
 </body>
 </html>
