--- a/views/htmlDemo.hbs
+++ b/views/htmlDemo.hbs
@@ -160,7 +160,7 @@
         </div>
     </div>
     <footer>
-        <p>&copy; 2024 Bhavya Goswami</p>
+        <p>&copy; 2024 Bliss Parmar</p>
     </footer>
 </body>
 </html>
