--- a/views/htmlDemo.html
+++ b/views/htmlDemo.html
@@ -9,7 +9,7 @@
 
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<a class="navbar-brand" href="#">Student Name</a>
+			<a class="navbar-brand" href="#">Bliss Parmar</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -119,7 +119,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Bhavya Goswami (bmgoswami@Myseneca.ca, Seneca ID: 148780232)</p>
+        <p>&copy; 2024 Bliss Parmar (bbparmar@myseneca.ca, Seneca ID: 117217232)</p>
     </footer>
 </body>
 </html>
